--- a/homepage.html
+++ b/homepage.html
@@ -13,30 +13,32 @@
 </html>
 
 <body>
-    <header>
-        <div class="logo">
-            <img src="assets/Header_site_2019.png">
-        </div>
-
-        <nav> 
-            <div class="menu">
-                <a href="homepage.html">Home</a>
-                <a href="">Portofoliu</a>
-                <a href="">Servicii</a>
-                <a href="">Blog</a>
-                <a href="about-me.html">Despre mine</a>
-                <a href="contact.html">Contact</a>
+    <div class="parallax-header">
+        <header>
+            <div class="logo">
+                <img src="assets/Header_site_2019.png">
             </div>
-            <div class="menu-mobile">
-                <i class="fas fa-bars"></i>
-            </div>
-        </nav>
 
-        <div class="social-media-links">
-            <a href="https://www.facebook.com/simonastanciu.ro">facebook.</a>
-            <a href="https://www.instagram.com/simonastanciu.ro">instagram.</a>
-        </div>
-    </header>
+            <nav> 
+                <div class="menu">
+                    <a href="homepage.html">Home</a>
+                    <a href="">Portofoliu</a>
+                    <a href="">Servicii</a>
+                    <a href="">Blog</a>
+                    <a href="about-me.html">Despre mine</a>
+                    <a href="contact.html">Contact</a>
+                </div>
+                <div class="menu-mobile">
+                    <i class="fas fa-bars"></i>
+                </div>
+            </nav>
+
+            <div class="social-media-links">
+                <a href="https://www.facebook.com/simonastanciu.ro">facebook.</a>
+                <a href="https://www.instagram.com/simonastanciu.ro">instagram.</a>
+            </div>
+        </header>
+    </div>
 
     <main>
         <h1>Fotograful amintirilor tale!</h1>
@@ -63,19 +65,19 @@
         <div class="blogpost-wrapper">
             <div class="top"> 
                 <div class="top-left">
-                    <div class="top-left-name">Emma si George</div>
+                    <a href="" class="top-left-name">Emma si George</a>
                 </div>
                 <div class="top-right">
-                    <div class="top-right-name">Markodor Foodtruck</div>
+                    <a class="top-right-name">Markodor Foodtruck</a>
                 </div>
             </div>
 
             <span class="bottom">
                 <div class="bottom-left">
-                    <div class="bottom-left-name">Optica medicala Optibis</div>
+                    <a class="bottom-left-name">Optica medicala Optibis</a>
                 </div>    
                 <div class="bottom-right">
-                    <div class="bottom-right-name">Lavinia si Ionut</div>
+                    <a class="bottom-right-name">Lavinia si Ionut</a>
                 </div>
             </span>
         </div>
